--- a/Tp3/index.html
+++ b/Tp3/index.html
@@ -125,6 +125,18 @@
                 </tbody>
             </table>
         </section>
+        <section class="secciones">
+            <h2>Registrarse para recibir Promociones y recomendaciones</h2>
+            <form class="formulario" id="formulario" action="https://example.com/submit" method="POST">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <button class="Enviar" type="submit">Confirmar</button>
+            </form>
+        </section>
     </main>
 
     <!-- Pie de página -->
