--- a/Tp3/index.html
+++ b/Tp3/index.html
@@ -127,14 +127,14 @@
         </section>
         <section class="secciones">
             <h2>Registrarse para recibir Promociones y recomendaciones</h2>
-            <form class="formulario" id="formulario" action="https://example.com/submit" method="POST">
+            <form class="formulario" id="formulario">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" required>
 
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
 
-                <button class="Enviar" type="submit">Confirmar</button>
+                <button id="boton" class="Enviar" type="submit">Confirmar</button>
             </form>
         </section>
     </main>
