--- a/Tp3/index.html
+++ b/Tp3/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,9 @@
     <meta name="author" content="GRUPO B">
     <title>Historia y Recomendaciones de Atlus</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
+
 <body>
 
     <!-- Encabezado con logo y título -->
@@ -125,18 +127,31 @@
                 </tbody>
             </table>
         </section>
+
         <section class="secciones">
-            <h2>Registrarse para recibir Promociones y recomendaciones</h2>
+            <h2>Registrarse para recibir promociones y recomendaciones</h2>
             <form class="formulario" id="formulario">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" required>
 
-                <label for="email">Email:</label>
+                <label for="email">Correo electrónico:</label>
                 <input type="email" id="email" name="email" required>
 
-                <button id="boton" class="Enviar" type="submit">Confirmar</button>
+                <label for="asunto">Asunto:</label>
+                <select id="asunto" name="asunto" required>
+                    <option value="" disabled selected>Selecciona un asunto</option>
+                    <option value="promociones">Promociones</option>
+                    <option value="recomendaciones">Recomendaciones</option>
+                    <option value="consultas">Consultas generales</option>
+                </select>
+
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+
+                <button id="boton" class="Enviar" type="submit">Enviar</button>
             </form>
         </section>
+
         <!-- Apartado de cálculo de descuentos -->
         <section class="secciones" id="descuentos">
             <h2>Calculadora de descuentos de juegos (Steam Spring Sale)</h2>
@@ -156,6 +171,16 @@
             </form>
             <div id="resultado-descuento" style="margin-top:10px; font-weight:bold;"></div>
         </section>
+
+        <!-- Apartado de contador de caracteres y caja interactiva -->
+        <section class="secciones" id="extras">
+            <h2>Contador de caracteres</h2>
+            <textarea id="miTextarea">Contador de caracteres</textarea>
+            <p id="contador">22 caracteres</p>
+
+            <h2>Segunda parte</h2>
+            <div class="caja" id="caja"></div>
+        </section>
     </main>
 
     <!-- Pie de página -->
@@ -167,4 +192,5 @@
     </footer>
 
 </body>
+
 </html>
