--- a/Tp3/index.html
+++ b/Tp3/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="GRUPO B">
     <title>Historia y Recomendaciones de Atlus</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
 </head>
 
 
