correccion form, repetia dos veces la linea de registrarse

--- a/Tp3/index.html
+++ b/Tp3/index.html
@@ -129,9 +129,8 @@
                 </tbody>
             </table>
         </section>
-
+<!-- añadir con php que verigique todo, y que envie los datos y los procese -->
         <section class="secciones">
-            <h2>Registrarse para recibir promociones y recomendaciones</h2>
             <h2>Registrarse para recibir promociones y recomendaciones</h2>
             <form class="formulario" id="formulario">
                 <label for="nombre">Nombre:</label>
